--- a/nodejs-project/package.json
+++ b/nodejs-project/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Janea Systems Inc.",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "sqlite3": "^5.1.6"
+  }
 }
