--- a/nodejs-project/package.json
+++ b/nodejs-project/package.json
@@ -24,7 +24,6 @@
   "dependencies": {
     "@mapbox/mbtiles": "^0.12.1",
     "async": "^2.6.1",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.3",
@@ -40,7 +39,8 @@
     "path": "^0.12.7",
     "request": "^2.88.0",
     "rimraf": "^2.6.3",
-    "yargs": "^12.0.2"
+    "yargs": "^12.0.2",
+    "sqlite3": "5.1.6"
   },
   "scripts": {
     "start": "nodemon --watch bin --watch lib --watch main.js",
