--- a/package.json
+++ b/package.json
@@ -39,12 +39,13 @@
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
-    "@red-mobile/nodejs-mobile-cordova": "github:JaneaSystems/redmobile-nodejs-mobile-cordova#fix-mobile-gyp-resolution",
+    "@red-mobile/nodejs-mobile-cordova": "github:ManWithBear/nodejs-mobile-cordova#add_ios_support",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "cordova-android": "^12.0.0",
+    "cordova-ios": "^7.0.1",
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^5.0.0",
@@ -76,7 +77,8 @@
       "@red-mobile/nodejs-mobile-cordova": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
